policies/docker-cis-5.21-ensure-the-default-seccomp-profile-is-not-disabled.yaml
apiVersion: config.stackrox.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: docker-cis-5.21-ensure-the-default-seccomp-profile-is-not-disabled
spec:
  categories:
  - Docker CIS
  criteriaLocked: true
  description: Seccomp filtering provides a means to filter incoming system calls.
    The default seccomp profile uses an allow list to permit a large number of common
    system calls, and block all others.
  enforcementActions: []
  eventSource: NOT_APPLICABLE
  exclusions: []
  isDefault: false
  lifecycleStages:
  - DEPLOY
  mitreAttackVectors: []
  mitreVectorsLocked: true
  policyName: 'GitOps - Docker CIS 5.21: Ensure the default seccomp profile is not
    disabled'
  policySections:
  - sectionName: Section 1
    policyGroups:
    - fieldName: Seccomp Profile Type
      booleanOperator: OR
      negate: false
      values:
      - value: UNCONFINED
  rationale: A large number of system calls are exposed to every userland process
    with many of them going unused for the entire lifetime of the process. Most of
    applications do not need all these system calls and would therefore benefit from
    having a reduced set of available system calls. Having a reduced set of system
    calls reduces the total kernel surface exposed to the application and thus improvises
    application security.
  remediation: By default, seccomp profiles are enabled. You do not need to do anything
    unless you want to modify and use a modified seccomp profile.
  scope: []
  severity: MEDIUM_SEVERITY
  disabled: true
